# WebexPythonSDK

./: .flake8  .gitattributes  .gitignore  .ruff.toml  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PAGINATION_FIX_README.md  Pipfile  README.md  README.rst  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
.github/workflows/: build-and-test.yml  docs.yml  python-publish.yml  release.yml
ciscosparkapi/: __init__.py  _version.py  exceptions.py  generator_containers.py  helper.py  helperfunc.py  response_codes.py  responsecodes.py  restsession.py  setup.py  sparkdata.py  utils.py
ciscosparkapi/api/: __init__.py  access_tokens.py  accesstokens.py  events.py  licenses.py  memberships.py  messages.py  organizations.py  people.py  roles.py  rooms.py  team_memberships.py  teammemberships.py  teams.py  webhooks.py
ciscosparkapi/models/: __init__.py  access_token.py  license.py  membership.py  message.py  organization.py  person.py  role.py  room.py  simple.py  sparkdata.py  team.py  team_membership.py  webhook.py  webhook_event.py
docs/: Makefile  code_of_conduct.rst  conf.py  contributing.rst  index.rst  installation.rst  make.bat
docs/ci/: MAINTAINERS.md
docs/ci/legacy/: README.md  build-and-test.token-keeper.yml
docs/user/: api.rst  api_structure_table.rst  cards.rst  intro.rst  migrate.rst  quickstart.rst  tutorial.rst
examples/: aio_simple.py  bot-example-flask.py  bot-example-webpy.py  bot-with-card-example-flask.py  botexample.py  local_file_upload.py  ngrokwebhook.py  oauth-flask-ngrok.py  people.py  simple.py  thread_example.py
examples/people/: people.py
examples/pyramidSparkBot/: README.rst  pyramidSparkBot.ini  setup.py
examples/pyramidSparkBot/pyramidSparkBot/: __init__.py  views.py
examples/pyramidWebexTeamsBot/: README.rst  pyramidWebexTeamsBot.ini  setup.py
examples/pyramidWebexTeamsBot/pyramidWebexTeamsBot/: __init__.py  views.py
generator/: exceptions.py  generate.py  requirements.txt  utils.py
generator/models/: meeting_invitees.yaml  meeting_registrants.yaml  meeting_templates.yaml  meetings.yaml
generator/templates/: api.py  mixins.py
script/: README.md  build  ci  ci-bootstrap  clean  console  installdeps  ipython_console.py  setup  test  update
src/webexpythonsdk/: __init__.py  _metadata.py  _version.py  config.py  environment.py  exceptions.py  generator_containers.py  response_codes.py  restsession.py  thread_utils.py  utils.py
src/webexpythonsdk/api/: __init__.py  access_tokens.py  admin_audit_events.py  attachment_actions.py  events.py  guest_issuer.py  hunt_groups.py  licenses.py  meeting_invitees.py  meeting_registrants.py  meeting_templates.py  meetings.py  memberships.py  messages.py  organization_contacts.py  organizations.py  people.py  recordings.py  roles.py  room_tabs.py  rooms.py  team_memberships.py  teams.py  webhooks.py
src/webexpythonsdk/models/: dictionary.py  immutable.py  simple.py
tests/: conftest.py  environment.py  test_ciscosparkapi.py  test_ciscosparkapi_online.py  test_pagination_fix.py  test_restsession.py  test_webexpythonsdk.py  test_webexteamsdk.py  test_webexteamssdk.py  utils.py
tests/api/: __init__.py  adaptive_card.json  attachment_actions_card.json  example_card.json  test_accesstokens.py  test_admin_audit_events.py  test_attachment_actions.py  test_events.py  test_guest_issuer.py  test_licenses.py  test_meeting_registrants.py  test_meetings.py  test_memberships.py  test_messages.py  test_organization_contacts.py  test_organizations.py  test_people.py  test_recordings.py  test_roles.py  test_room_tabs.py  test_rooms.py  test_teammemberships.py  test_teams.py  test_webhooks.py
webexteamsdk/: __init__.py  _metadata.py  _version.py  environment.py  exceptions.py  generator_containers.py  response_codes.py  restsession.py  utils.py
webexteamsdk/api/: __init__.py  access_tokens.py  events.py  licenses.py  memberships.py  messages.py  organizations.py  people.py  roles.py  rooms.py  team_memberships.py  teams.py  webhooks.py
webexteamsdk/models/: __init__.py  access_token.py  dictionary.py  event.py  immutable.py  organization.py  person.py  role.py  room.py  simple.py  sparkdata.py  team.py  team_membership.py  webhook_event.py
webexteamsdk/models/mixins/: event.py  membership.py  organization.py  team_membership.py  webhook.py  webhook_event.py
webexteamssdk/: __init__.py  _metadata.py  _version.py  config.py  environment.py  exceptions.py  generator_containers.py  response_codes.py  restsession.py  utils.py
webexteamssdk/aio/: __init__.py  exceptions.py  generator_containers.py  restsession.py  utils.py
webexteamssdk/aio/api/: __init__.py  access_tokens.py  attachment_actions.py  events.py  guest_issuer.py  licenses.py  memberships.py  messages.py  organizations.py  people.py  roles.py  rooms.py  team_memberships.py  teams.py  webhooks.py
webexteamssdk/api/: __init__.py  access_tokens.py  admin_audit_events.py  attachment_actions.py  events.py  guest_issuer.py  licenses.py  meeting_invitees.py  meeting_registrants.py  meeting_templates.py  meetings.py  memberships.py  messages.py  organizations.py  people.py  recordings.py  roles.py  room_meeting_details.py  room_tabs.py  rooms.py  team_memberships.py  teams.py  webhooks.py
webexteamssdk/cards/: abstract_components.py  actions.py  card.py  components.py  container.py  inputs.py  options.py  utils.py
webexteamssdk/models/: dictionary.py  immutable.py  simple.py
webexteamssdk/models/cards/: __init__.py  abstract_components.py  actions.py  adaptive_card_component.py  card.py  components.py  container.py  inputs.py  options.py  utils.py
webexteamssdk/models/mixins/: access_token.py  admin_audit_event.py  attachment_action.py  event.py  guest_issuer_token.py  license.py  meeting_invitees.py  meeting_registrants.py  meeting_templates.py  meetings.py  membership.py  message.py  organization.py  person.py  recording.py  role.py  room.py  room_meeting_details.py  room_meeting_info.py  room_tab.py  team.py  team_membership.py  (+2 more)
(+37 files in other folders)
