# -------------------------------------------------------------------------------------------------
# Webex Python SDK Package Configuration
# -------------------------------------------------------------------------------------------------

[tool.poetry]
name = "webexpythonsdk"
version = "0.0.0"  # This will be overwritten by the build process
description = "Work with the Webex APIs in native Python!"
authors = ["Chris Lunsford <cm@lunsford.io>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/WebexCommunity/WebexPythonSDK"
repository = "https://github.com/WebexCommunity/WebexPythonSDK"
documentation = "https://webexcommunity.github.io/WebexPythonSDK"
include = ["LICENSE", "README.rst"]
keywords = ["cisco", "webex", "api", "sdk", "python"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Communications",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Conferencing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]


# --------------------------------------------------------------------------------------
# Package Dependencies
# --------------------------------------------------------------------------------------

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
PyJWT = "^2.8.0"


# --------------------------------------------------------------------------------------
# Development Dependencies
# --------------------------------------------------------------------------------------

[tool.poetry.group.dev.dependencies]
PyYAML = "^6.0.1"
ruff = "^0.4.9"
pytest = "^8.2.2"
ipython = "^8.25.0"

# --------------------------------------------------------------------------------------
# Documentation Dependencies
# --------------------------------------------------------------------------------------

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"

# --------------------------------------------------------------------------------------
# Build System
# --------------------------------------------------------------------------------------

[build-system]
requires = ["poetry-core>=1.2.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"


# -------------------------------------------------------------------------------------------------
# Tool Configurations
# -------------------------------------------------------------------------------------------------

# --------------------------------------------------------------------------------------
# Ruff
# --------------------------------------------------------------------------------------

[tool.ruff]
line-length = 79
extend-exclude = [
    "generator/**",
]

[tool.ruff.lint]
# B: flake8-bugbear
# Q: flake8-quotes
extend-select = [ "B", "Q", "W" ]
ignore = [
    # E402 module level import not at top of file
    "E402",
    # F401 'builtins.*' imported but unused
    "F401",
    # F403 'from builtins import *' used; unable to detect undefined names
    "F403",
    # F405 'unicode' may be undefined, or defined from star imports: builtins
    "F405",
]


# --------------------------------------------------------------------------------------
# Pytest
# --------------------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = ["slow", "manual"]


# --------------------------------------------------------------------------------------
# Poetry Dynamic Versioning
# --------------------------------------------------------------------------------------

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/webexpythonsdk/_metadata.py"]
